fixed view on mobile

--- a/index.less
+++ b/index.less
@@ -6,6 +6,10 @@ body {
 	height: 100vh;
 	font-family: Inter, Arial, sans-serif;
 	background-color: #1c1c1c;
+	
+	@media screen and (max-width: 700px) {
+		padding: 17px;
+	}
 }
 
 .container {
@@ -16,8 +20,10 @@ body {
 	background-color: #1f2937;
 	
 	@media only screen and (max-width: 1000px) {
+		padding: 80px 40px;
 		max-width: unset;
 		width: 100%;
+		height: 100%;
 	}
 }
 
@@ -25,10 +31,8 @@ body {
 	margin: 0;
 	font-family: Karla, Arial, sans-serif;
 	color: #fff;
+	font-size: clamp(2.813rem, calc(2.625rem + 0.94vw), 3.75rem);
 	
-	@media only screen and (max-width: 700px) {
-		font-size: 70px;
-	}
 	
 	span {
 		color: #4adf86;
@@ -40,7 +44,7 @@ p {
 	color: #d5d4d8;
 	
 	@media only screen and (max-width: 700px) {
-		font-size: 34px;
+		font-size: 22px;
 	}
 }
 
@@ -58,8 +62,10 @@ p {
 	color: #fff;
 	
 	@media only screen and (max-width: 700px) {
-		padding: 31px 65px;
-		font-size: 40px;
+		margin-top: 50px;
+		padding: 15px 26px;
+		font-size: 22px;
+		white-space: nowrap;
 	}
 	
 	&:hover {
@@ -75,11 +81,6 @@ p {
 	border-top: 1px solid #2f3e53;
 	padding-top: 35px;
 	
-	@media only screen and (max-width: 700px) {
-		margin-top: 80px;
-		padding-top: 80px;
-	}
-	
 	.password {
 		display: flex;
 		justify-content: center;
@@ -89,21 +90,20 @@ p {
 		padding: 11px 32px;
 		min-width: 200px;
 		min-height: 40px;
-		color: #55F991;
+		color: #55f991;
 		background: #273549;
 		font-weight: 500;
 		font-size: 16px;
 		-webkit-user-select: all;
 		user-select: all;
-	}
-	
-	@media only screen and (max-width: 700px) {
-		padding: 31px 65px;
-		font-size: 40px;
-	}
-	
-	@media only screen and (max-width: 450px) {
-		flex-direction: column;
+		
+		@media only screen and (max-width: 700px) {
+			padding: 15px 26px;
+			min-width: 244px;
+			min-height: 55px;
+			font-size: 18px;
+			white-space: nowrap;
+		}
 	}
 }
 
@@ -124,9 +124,9 @@ p {
 		background-color: #000;
 		
 		@media only screen and (max-width: 700px) {
-			top: -63px;
-			padding: 11px;
-			font-size: 33px;
+			top: -35px;
+			padding: 8px;
+			font-size: 14px;
 		}
 		
 		&.run-animation {
